# livellm-client-py

./: .gitignore  LICENSE  README.md  livellm_client.py  pyproject.toml  raw_client.py
examples/: audio_transcribe.py  audio_tts.py  basic_agent.py  binary_messages.py  custom_provider_config.py  mcp_tools_example.py  raw_client.py  streaming_agent.py
livellm/: __init__.py
livellm/proxy/: __init__.py  livellm_client.py  raw_client.py  utils.py
livellm/proxy/models/: agent.py  audio.py  provider.py  tool.py
src/: utils.py
src/models/: __init__.py  error.py  message.py
