[project]
name = "livellm-client"
version = "0.1.0"
description = "Python client for the LiveLLM Servers e.g. Proxy, Realtime"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]
authors = [
    { name = "Kamil Saliamov" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/qalby-tech/livellm-client-py"
Repository = "https://github.com/qalby-tech/livellm-client-py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["livellm"]
include = [
    "livellm/py.typed",
]

[tool.hatch.build.targets.sdist]
include = [
    "/livellm",
    "/README.md",
    "/pyproject.toml",
]
